# codec

./: .gitignore  AGENTS.md  AUDIT_INDEPENDENT_2026_04_06.md  AUDIT_INSTRUCTIONS.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  ENTERPRISE_FIXES.md  FEATURES.md  HANDOVER.md  LICENSE  PHOTON_DEMO.md  PRIVACY.md  PRODUCT_BREAKDOWN.md  README.md  SECURITY.md  STRESS_TESTS.md  THINK_PROMPT.md  WAVE4_RESULTS.md  authlib google-auth-httplib2 --break-system-packages  ava_hotkey.py  codec.py  codec_agent.py  codec_agent_messaging.py  codec_agent_plan.py  codec_agent_runner.py  codec_agents.py  codec_alerts.py  codec_ask_user.py  codec_audit.html  codec_audit.py  codec_audit_analyzer.py  codec_auth.html  codec_autopilot.py  codec_ava_client.py  codec_bridges.py  codec_cdp.py  codec_chat.html  (+96 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
ax_bridge/: ax_bridge  main.swift
codec_auth/: codec_auth  main.swift
codec_cookbook/: __init__.py  args.py  catalog.json  catalog.py  download.py  fit.py  probe.py  serve.py
docs/: A4-SKILL-LOADER-UNIFICATION-DESIGN.md  API.md  APPLE-DISTRIBUTION.md  APPLE-SYNC.md  ARCHITECTURE.md  CONTEXT_REPORT.md  DAYBREAK-DESIGN.md  F15-PYPROJECT-DESIGN.md  F4-RUFF-CLEANUP-DESIGN.md  F5-VERSIONING-DESIGN.md  FIX8-ROUTES-CHAT-EXTRACTION-DESIGN.md  FIX9-JSONSTORE-STATE-REGISTRY-DESIGN.md  HANDOFF-MICKAEL.md  HUE-DISCOVERY-DESIGN.md  INCIDENT-2026-05-01-spurious-skill-fires.md  MCP_HTTP_SETUP.md  ONE-PAGER.md  OVERLAY-REDESIGN.md  PHASE-1-AUDIT-REMEDIATION-BRIEF.md  PHASE1-COMPLETE.md  PHASE1-STEP1-BASELINE.md  PHASE1-STEP1-DESIGN.md  PHASE1-STEP1-POSTMERGE-SAMPLES.md  PHASE1-STEP1-PREMERGE-AUDIT.md  PHASE1-STEP2-BASELINE.md  PHASE1-STEP2-DESIGN.md  PHASE1-STEP2-POSTMERGE-SAMPLES.md  PHASE1-STEP2-PREMERGE-AUDIT.md  PHASE1-STEP3-BASELINE.md  PHASE1-STEP3-DESIGN.md  PHASE1-STEP3-POSTMERGE-SAMPLES.md  PHASE1-STEP3-PREMERGE-AUDIT.md  PHASE1-STEP3-SAMPLING-COMMANDS.md  PHASE2-BLUEPRINT.md  PHASE2-COMPLETE.md  PHASE2-STEP5-DESIGN.md  PHASE2-STEP6-DESIGN.md  PHASE2-STEP6-TRIGGER-MUTE.md  PHASE3-BLUEPRINT.md  PHASE3-COMPLETE.md  (+58 more)
pilot/: __init__.py  audit.py  compiler.py  config.py  hitl.py  pilot_agent.py  pilot_chrome.py  pilot_runner.py  replay.py  safety.py  screencast.py  skill_review.py  snapshot.py  test_phase1.py  trace.py
plugins/: self_improve.py
promo/: video_script_v3.md
routes/: __init__.py  _shared.py  agents.py  approvals.py  audit.py  auth.py  cdp.py  chat.py  config.py  cortex.py  health.py  heartbeat.py  history.py  mcp.py  media.py  memory.py  (+17 more)
(+456 files in other folders)
